--- a/microgrep_in_c/Makefile
+++ b/microgrep_in_c/Makefile
@@ -1,6 +1,10 @@
-microgrep: src/microgrep.c
+microgrep: target/microgrep
+
+target/microgrep: src/microgrep.c target
 	cc -o target/microgrep src/microgrep.c
 
 run: microgrep
 	./target/microgrep ${INPUT_PATH}
 
+target:
+	mkdir target
