--- a/euler_in_rust/p003/Cargo.toml
+++ b/euler_in_rust/p003/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "p003"
 version = "0.1.0"
-authors = ["Pablo Brasero <pablo@new-bamboo.co.uk>"]
+authors = ["Pablo Brasero <pablo@thoughtbot.com>"]
 
 [dependencies]
 euler = { path = '../euler' }
