--- a/euler_in_rust/p001/Cargo.toml
+++ b/euler_in_rust/p001/Cargo.toml
@@ -1,4 +1,4 @@
 [package]
 name = "p001"
 version = "0.1.0"
-authors = ["Pablo Brasero <pablo@new-bamboo.co.uk>"]
+authors = ["Pablo Brasero <pablo@thoughtbot.com>"]
