Ensure C version runs as fast as possible

--- a/microgrep/c/Makefile
+++ b/microgrep/c/Makefile
@@ -1,7 +1,7 @@
 microgrep: target/microgrep
 
 target/microgrep: src/microgrep.c target
-	cc -o target/microgrep src/microgrep.c
+	cc -O3 -o target/microgrep src/microgrep.c
 
 run: microgrep
 	./target/microgrep ${INPUT_PATH}
